--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,4 @@
-.header__link {
+.header__lang-link {
   font-size: 24px;
   line-height: 28px;
   color: #fff;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 568px) {
-  .header__link {
+  .header__lang-link {
     font-size: 18px;
     line-height: 20px;
   }
