--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,10 +3,14 @@
   grid-area: 2 / 1 / 3 / 2;
 }
 
+@media screen and (max-width: 984px) {
+  .place__image {
+    max-width: 340px;
+  }
+}
+
 @media screen and (max-width: 568px) {
   .place__image {
-    width: 100vw;
-    margin: 0 -16px;
     grid-area: 3 / 1 / 4 / 2;
   }
 }
