--- a/blocks/place/__paragraph-container/place__paragraph-container.css
+++ b/blocks/place/__paragraph-container/place__paragraph-container.css
@@ -1,9 +1,11 @@
 .place__paragraph-container {
   grid-area: 2 / 2 / 3 / 3;
+  min-width: 260px;
 }
 
 @media screen and (max-width: 568px) {
   .place__paragraph-container {
+    padding: 0 16px;
     grid-area: 4 / 1 / 5 / 2;
   }
 }
