--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 984px) {
   .place__title {
+    max-width: 330px;
     font-size: 42px;
     line-height: 46px;
   }
@@ -18,6 +19,7 @@
   .place__title {
     font-size: 32px;
     line-height: 35px;
+    padding: 0 16px;
     grid-area: 1 / 1 / 2 / 2;
   }
 }
